This commit was too dang big. Finished getting the BalanceCard working and added some stuff to the Transactions. Next I'll be working on the "Admin" settings page so that I can set prices and approve transactions for each user.

--- a/Source/AllowanceApp.Blazor/Components/Layout/MainLayout.razor
+++ b/Source/AllowanceApp.Blazor/Components/Layout/MainLayout.razor
@@ -1,8 +1,15 @@
-﻿@inherits LayoutComponentBase
+﻿@using AllowanceApp.Blazor.Services
+@using AllowanceApp.Shared.DTO
+@inherits LayoutComponentBase
+@inject AccountApiService AccountApi
 
 <div class="page">
     <div class="sidebar">
-        <NavMenu />
+        @if (Accounts is not null)
+        {
+            <NavMenu Accounts="Accounts"/>
+        }
+        
     </div>
 
     <main>
@@ -21,3 +28,14 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+
+
+@code {
+    public List<AccountDTO> Accounts {get; set;} = [];
+
+    protected override async Task OnInitializedAsync()
+    {
+        Accounts = await AccountApi.GetAllAccountsAsync();
+    }
+}
