--- a/Source/AllowanceApp.Blazor/wwwroot/dist.css
+++ b/Source/AllowanceApp.Blazor/wwwroot/dist.css
@@ -332,6 +332,12 @@
   .col-auto {
     grid-column: auto;
   }
+  .col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+  .col-span-2 {
+    grid-column: span 2 / span 2;
+  }
   .col-span-full {
     grid-column: 1 / -1;
   }
@@ -560,6 +566,9 @@
   .h-auto {
     height: auto;
   }
+  .h-full {
+    height: 100%;
+  }
   .w-25 {
     width: calc(var(--spacing) * 25);
   }
@@ -626,8 +635,14 @@
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+  .grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
   .grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+  .flex-col {
+    flex-direction: column;
   }
   .flex-row {
     flex-direction: row;
@@ -647,11 +662,23 @@
   .items-center {
     align-items: center;
   }
+  .items-start {
+    align-items: flex-start;
+  }
+  .justify-between {
+    justify-content: space-between;
+  }
   .justify-center {
     justify-content: center;
   }
   .justify-end {
     justify-content: flex-end;
+  }
+  .justify-start {
+    justify-content: flex-start;
+  }
+  .justify-items-start {
+    justify-items: start;
   }
   .gap-0 {
     gap: calc(var(--spacing) * 0);
@@ -691,6 +718,9 @@
     :where(& > :not(:last-child)) {
       border-color: var(--color-gray-200);
     }
+  }
+  .justify-self-stretch {
+    justify-self: stretch;
   }
   .truncate {
     overflow: hidden;
@@ -950,6 +980,9 @@
   .text-black {
     color: var(--color-black);
   }
+  .text-gray-400 {
+    color: var(--color-gray-400);
+  }
   .text-gray-500 {
     color: var(--color-gray-500);
   }
@@ -1075,6 +1108,11 @@
       color: var(--color-gray-400);
     }
   }
+  .dark\:text-gray-600 {
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-gray-600);
+    }
+  }
   .dark\:text-green-400 {
     @media (prefers-color-scheme: dark) {
       color: var(--color-green-400);
@@ -1136,7 +1174,6 @@ h1:focus {
   border-color: #929292;
 }
 .card-lg {
-  margin-inline: auto;
   :where(& > :not(:last-child)) {
     --tw-space-y-reverse: 0;
     margin-block-start: calc(calc(var(--spacing) * 6) * var(--tw-space-y-reverse));
@@ -1152,7 +1189,6 @@ h1:focus {
   }
 }
 .card {
-  margin-inline: auto;
   max-width: var(--container-md);
   :where(& > :not(:last-child)) {
     --tw-space-y-reverse: 0;
@@ -1169,7 +1205,6 @@ h1:focus {
   }
 }
 .card-sm {
-  margin-inline: auto;
   max-width: var(--container-xs);
   :where(& > :not(:last-child)) {
     --tw-space-y-reverse: 0;
