--- a/Source/AllowanceApp.Blazor/Components/Layout/NavMenu.razor
+++ b/Source/AllowanceApp.Blazor/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿@using AllowanceApp.Blazor.Services
 @using AllowanceApp.Shared.DTO
-@inject AccountApiService AccountApi
+@using Microsoft.AspNetCore.Components.Routing;
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
@@ -11,49 +11,46 @@
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        @if (accounts is not null && accounts.Count > 0)
-        {
-            @foreach (var account in accounts)
+    <nav class="flex flex-col justify-between h-full">
+        <div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                </NavLink>
+            </div>
+            @if (Accounts is not null && Accounts.Count > 0)
             {
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="@($"/account-details/{account.ID}")">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> @account.Name
-                    </NavLink>
-                </div>
+                @foreach (var account in Accounts)
+                {
+                    <div class="nav-item px-3">
+                        <NavLink class="nav-link" href="@($"/account-details/{account.ID}")">
+                            <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> @account.Name
+                        </NavLink>
+                    </div>
+                }
             }
-        }
-
-
-        @* <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
+        <div>
+            <div class="nav-item px-3 mt-4">
+                <NavLink class="nav-link" href="/Counter">
+                    <span class="bi bi-stars" aria-hidden="true"></span> How to earn points
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/Weather">
+                    <span class="bi bi-gear-fill" aria-hidden="true"></span> Settings
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/Error">
+                    <span class="bi bi-info-circle-fill" aria-hidden="true"></span> About
+                </NavLink>
+            </div>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="account">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Account
-            </NavLink>
-        </div> *@
     </nav>
 </div>
 
 @code {
-    private List<AccountDTO> accounts;
-
-    protected override async Task OnInitializedAsync()
-    {
-        accounts = await AccountApi.GetAllAccountsAsync();
-    }
+    [Parameter] public List<AccountDTO> Accounts {get; set;} = [];
 }
