--- a/Source/AllowanceApp.Blazor/Components/Pages/AccountDetails.razor
+++ b/Source/AllowanceApp.Blazor/Components/Pages/AccountDetails.razor
@@ -11,10 +11,14 @@
 else
 {
     <PageTitle>@account.Name</PageTitle>
-    <div class="grid grid-cols-2 gap-4 w-full max-w-6xl mx-auto">
-        <div class="w-full max-add-sm"><AccountCard AccountRecord="@account" OnAccountChanged="@RefreshAccount"></AccountCard></div>
-        <div class="w-50 max-add-sm"><BalanceCard AccountRecord="@account"></BalanceCard></div>
-        <div class="col-span-full">
+    <div class="grid grid-cols-2 gap-4 w-full max-w-6xl items-start justify-start justify-items-start">
+        <div class="h-full justify-self-stretch w-full">
+            <AccountCard AccountRecord="@account" OnAccountChanged="@RefreshAccount"></AccountCard>
+        </div>
+        <div class="h-full justify-self-stretch w-full">
+            <BalanceCard AccountRecord="@account" OnAccountChanged="@RefreshAccount"></BalanceCard>
+        </div>
+        <div class="col-span-2 justify-self-stretch w-full">
             <TransactionCard AccountRecord="@account"></TransactionCard>
         </div>
     </div>
