--- a/Source/AllowanceApp.Blazor/Components/Pages/Modal.razor
+++ b/Source/AllowanceApp.Blazor/Components/Pages/Modal.razor
@@ -3,7 +3,7 @@
 @if (IsVisible)
 {
     <div class="fixed inset-0 flex items-center justify-center bg-black/50 z-50">
-        <div class="card-sm relative animate-fadeIn">
+        <div class="@(SizeLarge ? "card-lg" : "card-sm") relative animate-fadeIn">
             <h2 class="card-title">@Title</h2>
 
             <!-- Modal content gets stuffed into this div-->
@@ -11,7 +11,8 @@
                 @ChildContent
             </div>
 
-            <div class="flex justify-end space-x-3">
+            <div class="grid justify-end space-x-3 gap-4 @(SizeLarge ? "grid-cols-4" : "grid-cols-2")">
+                @if(SizeLarge) {<p class="col-span-2"></p>}
                 <button @onclick="Confirm" class="btn-allowance">
                     Confirm
                 </button>
@@ -29,6 +30,7 @@
     [Parameter] public RenderFragment? ChildContent { get; set; }
     [Parameter] public EventCallback OnConfirm { get; set; }
     [Parameter] public EventCallback OnCancel { get; set; }
+    [Parameter] public bool SizeLarge { get; set; } = false;
 
     public void Show() => IsVisible = true;
     public void Hide()
