--- a/Source/AllowanceApp.Blazor/Components/Pages/TransactionCard.razor
+++ b/Source/AllowanceApp.Blazor/Components/Pages/TransactionCard.razor
@@ -20,6 +20,7 @@
                 <tr>
                     <th class="px-4 py-2 text-left text-lg font-medium text-gray-700 dark:text-gray-300">Transaction ID</th>
                     <th class="px-4 py-2 text-left text-lg font-medium text-gray-700 dark:text-gray-300">Date</th>
+                    <th class="px-4 py-2 text-left text-lg font-medium text-gray-700 dark:text-gray-300">Status</th>
                     <th class="px-4 py-2 text-left text-lg font-medium text-gray-700 dark:text-gray-300">Description</th>
                     <th class="px-4 py-2 text-right text-lg font-medium text-gray-700 dark:text-gray-300">Amount</th>
                 </tr>
@@ -32,8 +33,9 @@
                         <tr class="hover:bg-gray-50 dark:hover:bg-gray-800">
                             <td class="px-4 py-2 text-md text-gray-800 dark:text-gray-200">@tx.TransactionID</td>
                             <td class="px-4 py-2 text-md text-gray-800 dark:text-gray-200">@tx.Date.ToShortDateString()</td>
+                            <td class="px-4 py-2 text-md @(ApprovalTextColorCSS.GetValueOrDefault(ApprovalStatus.Approved))">@ApprovalStatus.Approved</td>
                             <td class="px-4 py-2 text-md text-gray-800 dark:text-gray-200">@tx.Description</td>
-                            <td class="px-4 py-2 text-md text-right font-medium @(tx.Amount >= 0 ? "text-green-600 dark:text-green-400" : "text-red-600 dark:text-red-400")">
+                            <td class="px-4 py-2 text-md font-medium @(tx.Amount >= 0 ? "text-green-600 dark:text-green-400" : "text-red-600 dark:text-red-400")">
                                 $@((tx.Amount/100.0).ToString("#0.00"))
                             </td>
                         </tr>
@@ -54,7 +56,13 @@
 
 @code {
     [Parameter] public required AccountDTO AccountRecord {get; set;}
-    public List<TransactionDTO> Transactions => AccountRecord.Transactions.OrderByDescending(t => t.TransactionID).ToList();
+    public List<TransactionDTO> Transactions => AccountRecord.Transactions.OrderByDescending(t => t.TransactionID).Take(10).ToList();
+    
+    private Dictionary<ApprovalStatus, string> ApprovalTextColorCSS = new() {
+            {ApprovalStatus.Approved, "text-green-600 dark:text-green-400"},
+            {ApprovalStatus.Declined, "text-red-600 dark:text-red-400"},
+            {ApprovalStatus.Pending, "text-gray-400 dark:text-gray-600 italic"},
+        };
 
     private WeatherForecast[]? forecasts;
 
