Needed to add @using directives to allow for the changes in .razor file structuring

--- a/Source/AllowanceApp.Blazor/Components/Pages/AccountDetails.razor
+++ b/Source/AllowanceApp.Blazor/Components/Pages/AccountDetails.razor
@@ -2,6 +2,7 @@
 @using AllowanceApp.Blazor.Components.Pages
 @using AllowanceApp.Blazor.Services
 @using AllowanceApp.Shared.DTO
+@using AllowanceApp.Blazor.Components.Cards
 @inject AccountApiService AccountApi
 
 @if (account is null)
