--- a/Source/AllowanceApp.Blazor/Components/Pages/Home.razor
+++ b/Source/AllowanceApp.Blazor/Components/Pages/Home.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @using AllowanceApp.Blazor.Services
 @using AllowanceApp.Shared.DTO
+@using AllowanceApp.Blazor.Components.Cards
 @inject AccountApiService AccountApi
 
 <PageTitle>Home</PageTitle>
